k8s-manifests/guestbook-rollout.yaml
# 1) Argo Rollout (Blue-Green) with manual promotion
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: guestbook-ui
  namespace: default
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
        version: green # change to blue/green based on release
    spec:
      containers:
        - name: guestbook-ui
          image: udemykcloud534/guestbook:20251122-143951-5f388c7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
  strategy:
    blueGreen:
      activeService: guestbook-ui-blue
      previewService: guestbook-ui-green
      autoPromotionEnabled: true
      autoPromotionSeconds: 120
      scaleDownDelaySeconds: 300
---
# 2) Blue Service (Active)
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-blue
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: guestbook-ui
  template:
    spec:
      containers:
        - image: udemykcloud534/guestbook:20251122-143951-5f388c7
---
# 3) Green Service (Preview)
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-green
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: guestbook-ui
  template:
    spec:
      containers:
        - image: udemykcloud534/guestbook:20251122-143951-5f388c7
---
# 4) Ingress for Blue (/) and Green (/preview)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui-blue
                port:
                  number: 80
          # regex path captures /preview and everything after it, then rewrites to /<captured>
          - path: /preview(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: guestbook-ui-green
                port:
                  number: 80
  template:
    spec:
      containers:
        - image: udemykcloud534/guestbook:20251122-143951-5f388c7
